src/components/Card/style.scss
@import '../../global.variables.scss';

.c-card {
    background-color: $color-text-dark;
    box-shadow: 0px 0px 10px rgba(19, 19, 31, 0.05);
    border-radius: 5px;
    padding: 26px;
    margin-top: 50px;

    font-family: $font-family;

    .c-card__title {
        width: fit-content;
        color: $color-text-light;
        font-size: 1.6em;
        margin: 22px 0 8px 0;
        cursor: pointer;

        &:hover {
            color: $blue-light-left;
            text-decoration: underline;
        }
    }
    .c-card__date, .c-card__text {
        color: $color-text-light-secondary;
        font-size: 1.1em;
    }

    .c-card__favorite {
        cursor: pointer;
    }
}

.c-popup {
    width: 100%;
    max-width: 1024px;
    max-height: 700px;
    background-color: $color-text-dark;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: fit-content;
    overflow-y: auto;
    padding: 30px 60px;
    border-radius: 5px;
    box-shadow: 0px 0px 10px rgba(19, 19, 31, 0.199);

    @media(max-width: 1366px) {
        top: 55%;
    }

    &::-webkit-scrollbar-track {
        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.103);
        background-color: #F5F5F5;
    }
    &::-webkit-scrollbar {
	    width: 10px;
    }
    &::-webkit-scrollbar-thumb {
        background-color: $blue-light-left;
    }

    font-family: $font-family;

    .c-popup__title {
        width: fit-content;
        color: $blue-light-left;
        font-size: 3.6em;
        margin: 22px 0 30px 0;

        @media(max-width: 768px) {
            font-size: 2em;
        }
        @media(max-width: 376px) {
            font-size: 1.5em;
        }
    }
    .c-popup__close {
        cursor: pointer;
    }

    .c-popup__date {
        color: $color-text-light-secondary;
        font-size: 1.6em;

        @media(max-width: 768px) {
            font-size: 1.5em;
        }
        @media(max-width: 376px) {
            font-size: 1em;
        }
    }

    .c-popup__text {
        color: $color-text-light-secondary;
        font-size: 1.8em;
        font-weight: 300;
        line-height: 1.5;
        margin-bottom: 100px;

        @media(max-width: 768px) {
            font-size: 1.2em;
        }
        @media(max-width: 376px) {
            font-size: 1em;
        }
    }
}

.u-wrapper-mask {
    height: 100vh;
    width: 100%;
    backdrop-filter: blur(18px);
    background-color: #00000042;
    position: fixed;
    top: 0;
    left: 0;
}

